application/brennoflavio/backrest/endpointslice.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: backrest
  namespace: backrest
  labels:
    kubernetes.io/service-name: backrest
addressType: IPv4
ports:
  - name: http
    port: 9898
    protocol: TCP
endpoints:
  - addresses:
      - 192.168.20.2
    conditions:
      ready: true
