application/brennoflavio/backrest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backrest
  namespace: backrest
spec:
  ports:
  - name: http
    port: 9898
    targetPort: 9898
