application/brennoflavio/backrest/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backrest
  namespace: backrest
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt-dns01
spec:
  ingressClassName: internal-nginx
  rules:
  - host: backrest.home.brennoflavio.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backrest
            port:
              number: 9898
  tls:
  - hosts:
    - backrest.home.brennoflavio.com.br
    secretName: backrest-tls
